[project]
name = "agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "chaimaelkoudri",email = "c.elkoudri@studenti.unibs.it"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
